home page spacing issue and megamenu issue resolved

--- a/web/src/shared/components/FeaturedEvents/style.scss
+++ b/web/src/shared/components/FeaturedEvents/style.scss
@@ -12,10 +12,6 @@
 .item-wrapper .venue-name{
   word-break: break-all;
 }
-.featured-event-date {
-    min-height: 40px;
-    max-height: 40px;
-  }
   .featured-wrapper{
     display: flex;
     align-items: center;
@@ -35,27 +31,18 @@
         display: none; // Safari and Chrome 
       }
       h3{
-        text-overflow: ellipsis;        
-        overflow: hidden;
         line-height: 18px;
-        white-space: normal;        
-        /* autoprefixer: off */ -webkit-box-orient: vertical; /* autoprefixer: on */ 
-        display: block; 
-        display: -webkit-box; 
-        -webkit-line-clamp: 2;        
         white-space: normal;
-        max-height: 40px;
-        height: 40px;
         @media(max-width: 767px){
-          max-height: 36px;
-          height: 36px;
+          max-height: 100%;
+          height: auto;
         }
       }
       .featured-item-img{
         .category{
           margin-bottom: 10px;
           &:empty{
-            display: flex !important;
+            display: none;
             background: transparent;
           }
         }
